--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,10 @@
-<html data-bs-theme="light" lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"><title>fox</title>
+<html data-bs-theme="light" lang="en"><head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>fox</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-
-</head>
-<body cz-shortcut-listen="true"><!-- Start: Hero Clean --><div class="container py-4 py-xl-5" id="hero"><div class="row gy-4 gy-md-0"><div class="col-md-6 order-lg-2 order-xl-2 order-xxl-2"><div class="p-xl-5 m-xl-5"><img src="https://res.cloudinary.com/dklongley/image/upload/v1694179654/girlsonly.png"></div></div><div class="col-md-6 d-md-flex align-items-md-center"><div><h2 class="text-uppercase fw-bold">I&nbsp; love my bushy white tipped tail</h2><p class="my-3" style="color: var(--bs-orange);">It keeps me foxy but also frail. Those nasty humans want to get rid of me. They don't want to share their chickens with foxy.</p></div></div></div></div><!-- End: Hero Clean -->
-
+<style>
   /*--------------------------------------------------------------
   # Services
   --------------------------------------------------------------*/
@@ -201,10 +201,15 @@
     color: #5fcf80;
   }    
   </style>
+</head>
+<body cz-shortcut-listen="true"><!-- Start: Hero Clean --><div class="container py-4 py-xl-5" id="hero"><div class="row gy-4 gy-md-0"><div class="col-md-6 order-lg-2 order-xl-2 order-xxl-2"><div class="p-xl-5 m-xl-5">
+  <img src="https://res.cloudinary.com/dklongley/image/upload/v1694179654/girlsonly.png"></div></div>
+  <div class="col-md-6 d-md-flex align-items-md-center">
+    <div><h2 class="text-uppercase fw-bold">I&nbsp; love my bushy white tipped tail</h2>
+    <p class="my-3" style="color: var(--bs-orange);">It keeps me foxy but also frail. Those nasty humans want to get rid of me. They don't want to share their chickens with foxy.</p></div></div></div></div><!-- End: Hero Clean -->
+
   
-  <section id="services" class="services" style="
-      padding: 120px 0px;
-  ">
+  <section id="services" class="services" style="padding: 120px 0px;">
   
         <div class="container aos-init aos-animate" data-aos="fade-up">
   
